新增切换城市和手动更新天气的功能。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,5 @@
         android:id="@+id/choose_area_fragment"
         android:name="test.gd.com.coolweather.fragment.ChooseAreaFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></fragment>
+        android:layout_height="match_parent"/>
 </FrameLayout>
